# drake

examples/quadruped/: BUILD.bazel  README.md  mini_cheetah_sim.cpp
examples/quadruped/models/mini_cheetah/: mini_cheetah_mesh.urdf
